@@ -1,3 +1,7 @@
+2005-08-31 Bart Hakvoort  <hakvoort@cvs.gnome.org>
+
+	* src/Dialog_Progress.cc: fixed bug with big fonts (#301831)
+
 2005-08-30 Bart Hakvoort  <hakvoort@cvs.gnome.org>
 
 	* src/Win_GParted.cc: fixed typo (#312661)
